changed project to gradle format and add obfuscation

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,22 @@
-# Created by .ignore support plugin (hsz.mobi)
-.idea/uiDesigner.xml
-.idea/vcs.xml
-.idea/workspace.xml
+# Gradle build results, gradle cache
+build/
+.gradle/
+
+# Android specific files
+/local.properties
+
+# Ignore top level log files and directories
+*.log
+logs/
+
+# IntelliJ specific files
+.idea/
+*.iml
 out/
+components/etc/
+
+# Eclipse specific files
+bin/
+.settings/
+.classpath
+.project
